fix footer whitespace

--- a/style.css
+++ b/style.css
@@ -31,6 +31,18 @@ header{
     max-height: 100%;
 }
 
+.text-buttons-header{
+    text-decoration: none;
+    color: black;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+.text-buttons-header:hover{
+    background-color: #f2f2f2;
+    padding: 5px;
+    border-bottom: 5px solid black;
+}
+
 .header-clickable-subcontainer{
    display: flex;
    justify-content: space-between;
@@ -82,7 +94,6 @@ header{
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    min-height: min(500px, 50vh);
 }
 
 .subscribe-box{
@@ -183,6 +194,10 @@ button{
     background-color: #f2f2f2;
     padding: 5px;
     border-bottom: 5px solid black;
+}
+
+.padding-bottom{
+    margin-bottom: 1rem;
 }
 
 .two-panes{
@@ -507,6 +522,13 @@ textarea{
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-        min-height: 0;
+    }
+    .text-buttons-header{
+        text-decoration: none;
+        color: black;
+        margin-left: 0rem;
+        margin-right: 0rem;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
     }
 }
